Add professor hub pages
Completed interfacing with database
Still need to update comments

--- a/Professor Hub/professorhub.html
+++ b/Professor Hub/professorhub.html
@@ -12,8 +12,7 @@
 		<h2>My Classes:</h2>
 		<table id="classtable"></table>
 		<p></p>
-		
-		<a id="createClass" href=http://localhost:8080/createclass.html>Create a New Class</a>
+		<button type="button" id="buttonCreate">Create New Class</button>
 	<body>
 	</body>
 </html>
