Added some CSS, deprecated editClass endpoint

--- a/Professor Hub/editclass.html
+++ b/Professor Hub/editclass.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<script src="createclass.js" defer></script>
+		<script src="editclass.js" defer></script>
 		<link href="professorhub.css" rel="stylesheet">
 		<title>Class Creation Page</title>
 	</head>
@@ -12,7 +12,7 @@
 			<div id="header">
 				<div id="logo"><img src="drexel-logo.png" alt="logo" width=200></div>
 				<div id="profInfo">
-					<h1>Create a Class</h1>
+					<h1>Edit a Class</h1>
 				</div>
 				
 			</div>
