Added Login Redirect

--- a/Professor Hub/professorhub.html
+++ b/Professor Hub/professorhub.html
@@ -16,7 +16,7 @@
 					<h3>Your pin number is <span id="pin"></span>.</h3>
 				</div>
 				<div id="logout">
-					<p>Is this not you? Please <a href="https://www.google.com">Log Out</a></p>
+					<p>Is this not you? Please <a href="/logout">Log Out</a></p>
 				</div>
 			</div>
 			<div id="classes">
