--- a/Professor Hub/student.html
+++ b/Professor Hub/student.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<script src="student.js" defer></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 		<link href="professorhub.css" rel="stylesheet">
 		<title>Submit Attendance Page</title>
 	</head>
